--- a/gallery.html
+++ b/gallery.html
@@ -3,39 +3,36 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MTENDERE education consultancy</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <title>Mtendere Education Consult - Study Abroad Malawi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="author" content="Mtendere Education Consult">
+
+    <!-- Bootstrap 5 & Custom Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
+
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <link rel="stylesheet" href="https://icons.iconscout.com">
-
-
-    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
-    <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.3/wow.min.js"></script>
-
 </head>
 
 <body>
     <div id="loadingSpinner">
         <div class="spinner"></div>
     </div>
-
     <!-- Mobile Menu -->
     <div class="site-mobile-menu">
         <div class="site-mobile-menu-header">
@@ -43,7 +40,50 @@
                 <span class="icofont-close js-menu-toggle"></span>
             </div>
         </div>
-        <div class="site-mobile-menu-body"></div>
+        <div class="site-mobile-menu-body"><!----->
+            <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="course.html" class="nav-link">Scholarships</a></li>
+                <li><a href="service.html" class="nav-link">Services</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Universities</a>
+                    <ul class="dropdown-menu">
+
+                        <!-- Direct Universities -->
+                        <li><a href="elements.html" class="dropdown-item">Partners</a></li>
+                        <li><a href="chardigarh.html" class="dropdown-item">Chandigarh University</a></li>
+                        <li><a href="Paruluniversity.html" class="dropdown-item">Parul University</a></li>
+                        <!-- Continue similarly for other universities -->
+
+                        <!-- GEDU GLOBAL Submenu -->
+                        <li class="dropdown-submenu">
+                            <a href="#" class="dropdown-item dropdown-toggle">GEDU GLOBAL</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" class="dropdown-item">GBS Dubai</a></li>
+                                <li><a href="#" class="dropdown-item">St Julians</a></li>
+                                <!-- Other GEDU entries -->
+                            </ul>
+                        </li>
+
+                        <!-- MSM UNIFY Submenu -->
+                        <li class="dropdown-submenu">
+                            <a href="#" class="dropdown-item dropdown-toggle">MSM UNIFY</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" class="dropdown-item">University of Niagara Falls</a></li>
+                                <li><a href="#" class="dropdown-item">University of Victoria</a></li>
+                                <!-- Other MSM entries -->
+                            </ul>
+                        </li>
+
+                    </ul>
+                </li>
+                <li><a href="team.html" class="nav-link">Our Staff</a></li>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
     </div>
 
     <!-- Top Bar -->
@@ -55,8 +95,8 @@
                     <a href="#faqModal" class="small text-dark mr-4" data-toggle="modal">
                         <i class="fa fa-question-circle mr-1"></i> Have a Question?
                     </a>
-                    <a href="tel:+265000000000" class="small text-dark mr-4">
-                        <i class="fa fa-phone mr-1"></i> +265 000 000 000
+                    <a href="tel:" class="small text-dark mr-4">
+                        <i class="fa fa-phone mr-1"></i>
                     </a>
                     <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
                         <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
@@ -87,45 +127,14 @@
 
                 <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
                     <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="course.html" class="nav-link">Scholarships</a></li>
                     <li><a href="service.html" class="nav-link">Services</a></li>
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Universities</a>
-                        <ul class="dropdown-menu">
-
-                            <!-- Direct Universities -->
-                            <li><a href="elements.html" class="dropdown-item">Partners</a></li>
-                            <li><a href="chardigarh.html" class="dropdown-item">Chandigarh University</a></li>
-                            <li><a href="Paruluniversity.html" class="dropdown-item">Parul University</a></li>
-                            <!-- Continue similarly for other universities -->
-
-                            <!-- GEDU GLOBAL Submenu -->
-                            <li class="dropdown-submenu">
-                                <a href="#" class="dropdown-item dropdown-toggle">GEDU GLOBAL</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#" class="dropdown-item">GBS Dubai</a></li>
-                                    <li><a href="#" class="dropdown-item">St Julians</a></li>
-                                    <!-- Other GEDU entries -->
-                                </ul>
-                            </li>
-
-                            <!-- MSM UNIFY Submenu -->
-                            <li class="dropdown-submenu">
-                                <a href="#" class="dropdown-item dropdown-toggle">MSM UNIFY</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#" class="dropdown-item">University of Niagara Falls</a></li>
-                                    <li><a href="#" class="dropdown-item">University of Victoria</a></li>
-                                    <!-- Other MSM entries -->
-                                </ul>
-                            </li>
-
-                        </ul>
-                    </li>
-                    <li><a href="team.html" class="nav-link">Our Staff</a></li>
+                    <li><a href="team.html" class="nav-link">Team</a></li>
                     <li><a href="blog.html" class="nav-link">Blog</a></li>
                     <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li><a href="event.html" class="nav-link">events</a></li>
                 </ul>
 
                 <div class="d-lg-none d-flex">
@@ -138,7 +147,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header position-relative overlay-bottom" style="margin-bottom: 90px;">
         <div class="hero overlay" style="background-image: url('images/img-school-3-min.jpg');">
