--- a/testimonial.html
+++ b/testimonial.html
@@ -3,133 +3,147 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MTENDERE education consultancy</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <title>Mtendere Education Consult - Study Abroad Malawi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Mtendere Education Consult - Your trusted partner for studying abroad. We provide expert guidance, scholarship opportunities, and personalized support for Malawian students.">
+    <meta name="keywords" content="Mtendere Education Consult, study abroad, scholarships, international education, Malawian students, university application, visa support">
+    <meta name="author" content="Mtendere Education Consult">
+
+    <!-- Bootstrap 5 & Custom Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl.carousel/1.3.3/assets/owl.carousel.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="assets/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="assets/css/aos.css">
-    <link rel="stylesheet" href="assets/css/style.css">
 
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <div id="loadingSpinner">
+        <div class="spinner"></div>
+    </div>
+    <!-- Mobile Menu -->
     <div class="site-mobile-menu">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close">
                 <span class="icofont-close js-menu-toggle"></span>
             </div>
         </div>
-        <div class="site-mobile-menu-body"></div>
-    </div>
+        <div class="site-mobile-menu-body"><!----->
+            <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
+                <li><a href="index.html" class="nav-link active">Home</a></li>
+                <li><a href="course.html" class="nav-link">Scholarships</a></li>
+                <li><a href="service.html" class="nav-link">Services</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Universities</a>
+                    <ul class="dropdown-menu">
 
-    <nav class="site-nav mb-5">
-        <div class="pb-2 top-bar mb-3">
-            <div class="container">
-                <div class="row align-items-center">
+                        <!-- Direct Universities -->
+                        <li><a href="elements.html" class="dropdown-item">Partners</a></li>
+                        <li><a href="chardigarh.html" class="dropdown-item">Chandigarh University</a></li>
+                        <li><a href="Paruluniversity.html" class="dropdown-item">Parul University</a></li>
+                        <!-- Continue similarly for other universities -->
 
-                    <div class="col-6 col-lg-9">
-                        <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span data-target="#formModal" onclick="formModal(true)" class="d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i><span
-                                class="d-none d-lg-inline-block">
-
-                            </span></a>
-                        <a href="#" class="small mr-3"><i class="fa fa-envelope" aria-hidden="true"></i> <span
-                                class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
-                    </div>
-
-                    <!-- Language Selector -->
-                    <div class="d-lg-inline-block">
-                        <select class="form-select small mr-3" id=" language-select">
-                            <option value="en">English</option>
-                            <option value="es">Español</option>
-                            <option value="fr">Français</option>
-                            <!-- Add more languages here -->
-                        </select>
-                    </div>
-
-                    <a href="#" onclick="togglePopup(false)" style=" margin-right: 10px;">Log In</a>
-                    <a href="#" onclick="togglePopup(true)">Register</a>
-
-                </div>
-            </div>
-        </div>
-        <div class="sticky-nav js-sticky-header">
-            <div class="container position-relative">
-                <div class="site-navigation text-center">
-                    <a href="index.html" class="logo m-0">
-                        <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
-                    </a>
-                    <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="course.html">Scholarships</a></li>
-                        <li><a href="service.html">Services</a></li>
-                        <li class="has-children">
-                            <a href="#">Universities</a>
-                            <ul class="dropdown">
-                                <li><a href="elements.html">Partners</a></li>
-                                <li><a href="chardigarh.html">Chandigarh University</a></li>
-                                <li><a href="Paruluniversity.html">Parul University</a></li>
-                                <li><a href="Paruluniversity.html">CT University</a></li>
-                                <li><a href="Paruluniversity.html">Shoolin University</a></li>
-                                <li><a href="Paruluniversity.html">Jain University</a></li>
-                                <li><a href="Paruluniversity.html">Royal Global University</a></li>
-                                <li><a href="Paruluniversity.html">Symboisis University</a></li>
-                                <li><a href="Paruluniversity.html">Galgocia University</a></li>
-                                <li><a href="Paruluniversity.html">Noida University</a></li>
-                                <li><a href="Paruluniversity.html">Khalsa College</a></li>
-                                <li><a href="Paruluniversity.htmlLovey Professional University"></a></li>
-                                <li class="has-children">
-                                    <a href="#">GEDU GLOBAL</a>
-                                    <ul class="dropdown">
-                                        <li><a href="Paruluniversity.html">GBS Dubai</a></li>
-                                        <li><a href="Paruluniversity.html">St Julians</a></li>
-                                        <li><a href="Paruluniversity.html">Plymouth, MLA College</a></li>
-                                        <li><a href="Paruluniversity.html">Schiller International University</a></li>
-                                        <li><a href="Paruluniversity.html">Ecole de Management EMA</a></li>
-                                        <li><a href="Paruluniversity.html">Austrtian Perfoming Arts Conservatory</a>
-                                        </li>
-                                        <li><a href="Paruluniversity.html">Cyprus International University</a></li>
-                                        <li><a href="Paruluniversity.html">Cyprus West University</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-children">
-                                    <a href="#">MSM UNIFY</a>
-                                    <ul class="dropdown">
-                                        <li><a href="Paruluniversity.html">University of Niagara Faals</a></li>
-                                        <li><a href="Paruluniversity.html">University of Victoria</a></li>
-                                        <li><a href="Paruluniversity.html">Kwantlen</a></li>
-                                        <li><a href="Paruluniversity.html">University of Wolverhampton</a></li>
-                                        <li><a href="Paruluniversity.html">Webster University</a></li>
-                                        <li><a href="Paruluniversity.html">Dublin College</a></li>
-                                        <li><a href="Paruluniversity.html">Seatle Central College</a></li>
-                                        <li><a href="Paruluniversity.html">Thompson Rivers University</a></li>
-                                        <li><a href="Paruluniversity.html">University of Greenwish</a></li>
-                                    </ul>
-                                </li>
+                        <!-- GEDU GLOBAL Submenu -->
+                        <li class="dropdown-submenu">
+                            <a href="#" class="dropdown-item dropdown-toggle">GEDU GLOBAL</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" class="dropdown-item">GBS Dubai</a></li>
+                                <li><a href="#" class="dropdown-item">St Julians</a></li>
+                                <!-- Other GEDU entries -->
                             </ul>
                         </li>
-                        <li><a href="team.html">Our Staff</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+
+                        <!-- MSM UNIFY Submenu -->
+                        <li class="dropdown-submenu">
+                            <a href="#" class="dropdown-item dropdown-toggle">MSM UNIFY</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" class="dropdown-item">University of Niagara Falls</a></li>
+                                <li><a href="#" class="dropdown-item">University of Victoria</a></li>
+                                <!-- Other MSM entries -->
+                            </ul>
+                        </li>
+
                     </ul>
-                    <a href="#" class="btn-book btn btn-secondary btn-sm" data-target="#formModal">Enroll Now</a>
-                    <a href="#"
-                        class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
-                        data-toggle="collapse" data-target="#main-navbar">
+                </li>
+                <li><a href="team.html" class="nav-link">Our Staff</a></li>
+                <li><a href="blog.html" class="nav-link">Blog</a></li>
+                <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Top Bar -->
+    <div class="top-bar py-2 bg-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <div class="col-md-8 d-flex align-items-center">
+                    <a href="#faqModal" class="small text-dark mr-4" data-toggle="modal">
+                        <i class="fa fa-question-circle mr-1"></i> Have a Question?
+                    </a>
+                    <a href="tel:" class="small text-dark mr-4">
+                        <i class="fa fa-phone mr-1"></i>
+                    </a>
+                    <a href="mailto:mtendereeducationconsult@gmail.com" class="small text-dark">
+                        <i class="fa fa-envelope mr-1"></i> mtendereeducationconsult@gmail.com
+                    </a>
+                </div>
+
+                <div class="col-md-4 d-flex justify-content-end align-items-center">
+                    <select class="form-select form-select-sm mr-3" id="language-select">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        <option value="fr">Français</option>
+                    </select>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Navigation -->
+    <nav class="site-nav sticky-top shadow-sm bg-white">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-between py-3">
+
+                <a href="index.html" class="logo">
+                    <img src="img/Mtendere_logo.png" alt="Mtendere Education Consult" class="img-fluid"
+                        style="max-height: 50px;">
+                </a>
+
+                <ul class="site-menu d-none d-lg-flex list-unstyled m-0">
+                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="course.html" class="nav-link">Scholarships</a></li>
+                    <li><a href="service.html" class="nav-link">Services</a></li>
+                    <li><a href="team.html" class="nav-link">Team</a></li>
+                    <li><a href="blog.html" class="nav-link">Blog</a></li>
+                    <li><a href="gallery.html" class="nav-link">Gallery</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li><a href="event.html" class="nav-link">events</a></li>
+                </ul>
+
+                <div class="d-lg-none d-flex">
+                    <a href="#" class="burger site-menu-toggle js-menu-toggle text-dark">
                         <span></span>
                     </a>
                 </div>
+                <a href="#formModal" class="btn btn-sm btn-primary d-none d-lg-inline-block ml-4"
+                    data-toggle="modal">Enroll Now</a>
             </div>
         </div>
     </nav>
