--- a/index.html
+++ b/index.html
@@ -1642,118 +1642,116 @@
     <!-- Footer Start -->
     <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
         <div class="container mt-5 pt-5">
-            <div class="row">
-                <div class="col-md-6 mb-5">
-                    <a href="index.html" class="navbar-brand">
-                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                    </a>
-                    <p class="m-0">
-                        Mtendere Education Consult is a leading online education company dedicated to providing
-                        high-quality education to its clients. Our mission is to help students achieve their dreams and
-                        achieve their academic goals, while also providing them with the tools and support they need to
-                        succeed.
-                    </p>
+        <div class="row">
+            <div class="col-md-6 mb-5">
+            <a href="index.html" class="navbar-brand">
+                <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+            </a>
+            <p class="m-0">
+                Mtendere Education Consult is a leading online education company dedicated to providing
+                high-quality education to its clients. Our mission is to help students achieve their dreams and
+                achieve their academic goals, while also providing them with the tools and support they need to
+                succeed.
+            </p>
+            </div>
+            <div class="col-md-6 mb-5">
+            <h3 class="text-white mb-4">Newsletter</h3>
+            <div class="w-100">
+                <div class="input-group">
+                <input type="text" class="form-control border-light" style="padding: 30px;"
+                    placeholder="Your Email Address">
+                <div class="input-group-append">
+                    <button class="btn btn-primary px-4">Sign Up</button>
                 </div>
-                <div class="col-md-6 mb-5">
-                    <h3 class="text-white mb-4">Newsletter</h3>
-                    <div class="w-100">
-                        <div class="input-group">
-                            <input type="text" class="form-control border-light" style="padding: 30px;"
-                                placeholder="Your Email Address">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary px-4">Sign Up</button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>
-                        Babaje House, Off Mandala Road,<br>
-                        Area 3, Behind NBs<br>
-                        1st Floor Room 1,<br>
-                        Lilongwe<br>
-                    </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
-                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
-                    <div class="d-flex justify-content-start mt-4">
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
-                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="widget">
-                        <h3>Gallery</h3>
-                        <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="images/gal_1.jpg" data-fancybox="gal"><img
-                                        src="images/gal_1.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="images/gal_2.jpg" data-fancybox="gal"><img
-                                        src="images/gal_2.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="images/gal_3.jpg" data-fancybox="gal"><img
-                                        src="images/gal_3.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="images/gal_4.jpg" data-fancybox="gal"><img
-                                        src="images/gal_4.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="images/gal_5.jpg" data-fancybox="gal"><img
-                                        src="images/gal_5.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="images/gal_6.jpg" data-fancybox="gal"><img
-                                        src="images/gal_6.jpg" alt="" width="72" height="72"></a>
-                            </li>
-                        </ul>
-                    </div> <!-- /.widget -->
-                </div> <!-- /.col-lg-3 -->
-
-                <div class="col-md-3 mb-4">
-                    <h5 class="fw-bold">Study Abroad</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="study-in-us.html" class="text-white">Study In United States</a></li>
-                        <li><a href="study-in-ireland.html" class="text-white">Study In Ireland</a></li>
-                        <li><a href="study-in-germany.html" class="text-white">Study In Germany</a></li>
-                        <li><a href="study-in-australia.html" class="text-white">Study In Australia</a></li>
-                        <li><a href="study-in-uae.html" class="text-white">Study In UAE</a></li>
-                        <li><a href="study-in-malta.html" class="text-white">Study In Malta</a></li>
-                        <li><a href="study-in-france.html" class="text-white">Study In France</a></li>
-                        <li><a href="study-in-spain.html" class="text-white">Study In Spain</a></li>
-                        <li><a href="study-in-uk.html" class="text-white">Study In UK</a></li>
-                    </ul>
-                </div>
-
-                <!-- Footer Column 3: News and Blog -->
-                <div class="col-md-3 mb-4">
-                    <h5 class="fw-bold">News & Updates</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
-                        <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
-                        </li>
-                        <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-md-4 mb-5">
-                    <h3 class="text-white mb-4">Quick Links</h3>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
-                            Condition</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
-                    </div>
-                </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 mb-5">
+            <h3 class="text-white mb-4">Get In Touch</h3>
+            <p><i class="fa fa-map-marker-alt mr-2"></i>
+                Babaje House, Off Mandala Road,<br>
+                Area 3, Behind NBs<br>
+                1st Floor Room 1,<br>
+                Lilongwe<br>
+            </p>
+            <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+            <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+            <div class="d-flex justify-content-start mt-4">
+                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+            </div>
+            </div>
+            <div class="col-lg-3">
+            <div class="widget">
+                <h3>Gallery</h3>
+                <ul class="instafeed instagram-gallery list-unstyled">
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                <li><a class="instagram-item" href="assets/imgs/International studies.jpg" data-fancybox="gal"><img
+                        src="assets/imgs/International studies.jpg" alt="" width="72" height="72"></a>
+                </li>
+                </ul>
+            </div> <!-- /.widget -->
+            </div> <!-- /.col-lg-3 -->
+
+            <div class="col-md-3 mb-4">
+            <h5 class="fw-bold">Services</h5>
+            <ul class="list-unstyled">
+                <li><a href="study-abroad-programmes.html" class="text-white">Programmes</a></li>
+                <li><a href="study-abroad-application.html" class="text-white">Application Process</a></li>
+                <li><a href="study-abroad-scholarships.html" class="text-white">Scholarships</a></li>
+                <li><a href="study-abroad-visa.html" class="text-white">Visa Information</a></li>
+                <li><a href="study-abroad-testimonials.html" class="text-white">Testimonials</a></li>
+                <li><a href="study-abroad-blog.html" class="text-white">Blog</a></li>
+                <li><a href="study-abroad-contact.html" class="text-white">Contact Us</a></li>
+            </ul>
+            </div>
+
+            <!-- Footer Column 3: News and Blog -->
+            <div class="col-md-3 mb-4">
+            <h5 class="fw-bold">News & Updates</h5>
+            <ul class="list-unstyled">
+                <li><a href="news1.html" class="text-white">New Scholarship Opportunities for 2025</a></li>
+                <li><a href="news2.html" class="text-white">University Partnerships: Latest Developments</a>
+                </li>
+                <li><a href="blog.html" class="text-white">Blog: Tips on Applying to Top Universities</a></li>
+            </ul>
+            </div>
+
+            <div class="col-md-4 mb-5">
+            <h3 class="text-white mb-4">Quick Links</h3>
+            <div class="d-flex flex-column justify-content-start">
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                Condition</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+            </div>
+            </div>
+        </div>
         </div>
     </div>
     <div class="copyrights">
         <div class="container">
-            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+        <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
         </div>
     </div>
 
